discussion/kv_engine/183092/183092_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54640: Add support for client connection information

@todo add mcstat example
@todo add documentation

Change-Id: Icef362281b80fe23ab9015c85834d53d90398d18

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-11-22 07:24:04.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-22 07:24:21.000000000
Message: 
Patch Set 3: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/325872/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-22 07:51:21.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/496/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.cc:933:53: error: non-const lvalue reference to type "DcpMessageProducersIface" cannot bind to a value of unrelated type "Connection" [clang-diagnostic-error]
                            *cookies.front().get(), *this);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/include/memcached/dcp.h:387:60: note: passing argument to parameter "producers" here
                                 DcpMessageProducersIface& producers) = 0;
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.h:950:26: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    const nlohmann::json peername;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.h:953:26: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    const nlohmann::json sockname;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/496/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/connection.cc:933:53:
error: non-const lvalue reference to type "DcpMessageProducersIface" cannot bind to a value of unrelated type "Connection" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/496/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/480/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/daemon/connection.h:950:26:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/480/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/739/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `523469" to be less than or equal to `385024" - Unexpected fileSize for vbucket)
[2022-11-22T07:39:08.050Z] (427 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/739/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/488/ : FAILURE

Compile error at [2022-11-22T07:26:26.892Z] ../kv_engine/daemon/connection.h:950:26:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/488/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21290/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/637/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/502/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/512/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/512/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/493/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/503/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
